test: cover quick notes and palette navigation in browser